@@ -1,3 +1,6 @@
+ * When a h2 request carries a ':scheme' pseudoheader, it gives a 400
+   response if the scheme does not match the connection. Fixes #230.
+
 v2.0.2
 --------------------------------------------------------------------------------
  * When reaching server limits, such as MaxRequestsPerChild, the HTTP/2 connection
